--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
+    "build-file": "bun run build.ts",
     "build": "bun build --compile entry.ts --outfile dist/bun-example",
-    "start": "node index.js"
+    "dev": "bun run entry.ts"
   },
   "devDependencies": {
     "@types/bun": "^1.1.10"
